--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <htm>
     <head>
-        <title>Test</title>
+        <title>Welcom to ITC</title>
     </head>
     <body>
         <h1>hello</h1>
