--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Welcom to ITC</title>
     </head>
     <body>
+        <h1> Welcome</h1>
         <h1>hello</h1>
 		<h1>hi</h1>
 		<p>https://github.com/Michmongkul/internship.git</p>
