--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<htm>
+<html>
     <head>
         <title>Welcom to ITC</title>
     </head>
@@ -7,7 +7,11 @@
         <h1>hello</h1>
 		<h1>hi</h1>
 		<h1>rineth</h1>
-		<p>https://github.com/Michmongkul/internship.git</p>
+		<a href="https://github.com/Michmongkul/internship.git">https://github.com/Michmongkul/internship.git</a>
+        <hr>
+        <a href="https://github.com/ngouyuong/internship.git">https://github.com/ngouyuong/internship.git</a>
+        <hr>
+        <a href="https://github.com/chanrineth/internship.git">https://github.com/chanrineth/internship.git</a>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -15,4 +19,4 @@
         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </body>
-</htm>
+</html>
